<resources>
    <string name="app_name">Contact App</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logo">logo</string>
    <string name="contact_save">ADD CONTACT</string>
    <string name="more">more</string>
    <string name="setting">setting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_settings">Settings</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_header_about">About</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">Voice Mail</string>
    <string name="summary_faq">Voice mail settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.decagon.hq/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="add_contact">Add Contact</string>

</resources>
