<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
<!--    <androidx.appcompat.widget.Toolbar-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:id="@+id/toolbar_contact"-->
<!--        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"-->
<!--        app:title="@string/contact_save"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:theme="@style/NoAction1"-->
<!--        app:titleTextColor="@color/roundEdit"-->
<!--        android:background="@color/colorPrimary"-->


<!--        />-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edit"
            android:textColor="@color/background"
            android:hint="@string/name"
            android:textColorHint="@color/stroke2"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_edit"
            android:hint="@string/phone_number"
            android:textColorHint="@color/stroke2"
            android:inputType="phone"
            android:padding="16dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/stroke2"
            android:textColor="@color/background"
            android:background="@drawable/round_edit"
            android:hint="@string/address"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/stroke2"
            android:layout_marginTop="16dp"
            android:textColor="@color/background"
            android:background="@drawable/round_edit"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/save_contact"
                android:onClick="saveContact"
                style="@style/ButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.3"
                android:background="@drawable/login_button_press"
                android:text="@string/save"
                android:textColor="@color/roundEdit" />

            <Button
                android:id="@+id/login2"
                style="@style/ButtonLogin"
                android:onClick="cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@drawable/login_button_press"
                android:text="@string/cancel"
                android:textColor="@color/roundEdit" />


        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/upload"-->
<!--            style="@style/ButtonLogin"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="0.3"-->
<!--            android:onClick="upload"-->
<!--            android:background="@drawable/login_button_press"-->
<!--            android:text="Upload picture"-->
<!--            android:textColor="@color/roundEdit" />-->



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
