<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        android:theme="@style/NoAction2"
        app:titleTextColor="@color/roundEdit"
        app:title="SIGN UP"
        android:background="@color/colorPrimary">
    </androidx.appcompat.widget.Toolbar>
<!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_gravity="bottom|end"-->
<!--    android:src="@drawable/ic_call_24dp"-->
<!--    android:layout_margin="24dp"-->
<!--    android:background="@drawable/round_button" />-->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/sign_up_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_edit"
            android:hint="@string/username"
            android:textColor="@color/background"
            android:textColorHint="@color/stroke2"
            android:inputType="text"
            android:padding="16dp"

            />


        <EditText
            android:id="@+id/sign_up_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/background"
            android:textColorHint="@color/stroke2"
            android:background="@drawable/round_edit"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="16dp" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/background"
            android:background="@drawable/round_edit"
            android:hint="@string/password"
            android:textColorHint="@color/stroke2"
            android:inputType="textPassword"
            android:padding="16dp" />

        <EditText
            android:id="@+id/sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_edit"
            android:textColorHint="@color/stroke2"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <LinearLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/sign_up"
                style="@style/ButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.3"
                android:background="@drawable/login_button_press"
                android:onClick="signup"
                android:text="Sign Up"
                android:textColor="@color/roundEdit" />

            <Button
                android:id="@+id/login2"
                style="@style/ButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@drawable/login_button_press"
                android:text="@string/cancel"
                android:textColor="@color/roundEdit" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>