<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar_first"
        app:title="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/NoAction1"
        app:titleTextColor="@color/roundEdit"
        android:background="@color/colorPrimary"
        />


    <ImageView
        android:id="@+id/img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo2"
        app:layout_constraintBottom_toTopOf="@+id/signIn"
        app:layout_constraintDimensionRatio="1:1"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_first"
        android:contentDescription="@string/logo" />


    <EditText
        android:id="@+id/signIn"
        android:layout_width="@dimen/width"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:textColor="@color/background"
        android:background="@drawable/round_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/username"
        android:textColorHint="@color/stroke2"
        android:inputType="text" />
    <EditText
        android:id="@+id/sigInPassword"
        android:layout_width="@dimen/width"
        android:textColor="@color/background"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/round_edit"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/signIn"
        app:layout_constraintBottom_toTopOf="@id/forgot_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/password"
        android:textColorHint="@color/stroke2"
        android:inputType="textPassword"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me"
        app:layout_constraintBottom_toTopOf="@id/forgot_test"
        app:layout_constraintEnd_toStartOf="@id/logincheck"
        app:layout_constraintTop_toBottomOf="@id/sigInPassword"/>
    <CheckBox
        android:id="@+id/logincheck"
        android:buttonTint="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/forgot_test"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/sigInPassword" />

    <TextView
        android:id="@+id/forgot_test"
        android:layout_width="@dimen/width"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toBottomOf="@id/logincheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/width"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="@dimen/height"
        android:textColor="@color/roundEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_test"
        android:background="@drawable/login_button_press"
        style="@style/ButtonLogin"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/emailSignup"
        android:layout_width="@dimen/width"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="@dimen/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:background="@drawable/singup_button_press"
        style="@style/SignUp"
        android:theme="@style/SignUp"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_top_1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>